2008-01-16 16:22-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Sources/DOMHTML.m: Added code to add a newline for a <p> element.

2008-01-03  Riccardo Mottola <riccardo@kaffe.org>
	* Sources/DOMHtml.m: removed non-apple hack
	
2007-12-31  Nikolaus Schaller <hns@computer.org>
	* fixed bugs in entities table
	* added preliminary handling for <li>
	
2007-12-17  Nikolaus Schaller <hns@computer.org>
	* improved scroller handling
	
2007-11-20  Riccardo Mottola <riccardo@kaffe.org>
	* Sources/GNUmakefile: added WebPreferences
	
2007-10-13  Nikolaus Schaller <hns@computer.org>
	* improved HTML parsing (handle multiple <body> tags, add <tbody> if not present etc.)
	* fixed several bugs

2007-09-01  Nikolaus Schaller <hns@computer.org> and Riccardo Mottola <riccardo@kaffe.org>
	* AlpenSTEP workshop
	* fixed several bugs

2007-08-??  Nikolaus Schaller <hns@computer.org>
	* added some support for <li>
	* fixed several bugs

2007-07-??  Nikolaus Schaller <hns@computer.org>
	* browser renamed to SWK Browser

2007-06-13  Nikolaus Schaller <hns@computer.org>
	* updated NSXMLParser to do incremental parsing
	* added a DOM Tree Browser to GNUstepWeb

2007-05-15  Richard Frith-Macdonald <rfm@gnu.org>
	* Sources/GNUmakefile: add WebKitIMG.png resource

2007-04-01  Riccardo Mottola <riccardo@kaffe.org>
	* Sources/GNUmakefile: fixed makefile

2007-04-22  Nikolaus Schaller <hns@computer.org>
	* updated everything from mySTEP

2007-03-29  Riccardo Mottola <riccardo@kaffe.org>
	* Sources/ECMA*.[h,m]: added ECMAScript

2007-03-29  Riccardo Mottola <riccardo@kaffe.org>
	* Sources/*.[h,m]: corrected licenses
	
2007-03-26  Riccardo Mottola <riccardo@kaffe.org>
	* Sources/DOMCore.m,
	Sources/WebXMLDocumentRepresentation.h,
	Sources/WebXMLDocumentRepresentation.m,
	Sources/WebHTMLDocumentView.h,
	Sources/WebHTMLDocumentView.m,
	Sources/WebImageDocumentRepresentation.h,
	Sources/DOMHTML.h,
	Sources/DOMHTML.m,
	Sources/WebDOMOperations.h,