@@ -1,3 +1,6 @@
+2008-01-17  Riccardo Mottola <riccardo@kaffe.org>
+	* Sources/WebHTMLDocumentView.m: improved HR draw code
+	
 2008-01-16 16:22-EST Gregory John Casamento <greg_casamento@yahoo.com>
 
 	* Sources/DOMHTML.m: Added code to add a newline for a <p> element.
